--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/enketo-core"]
-	path = src/enketo-core
+[submodule "lib/enketo-core"]
+	path = lib/enketo-core
 	url = https://github.com/MartijnR/enketo-core.git
