--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/martijnr/enketo-dristhi"
-    },
+  },
   "contributors": [
     "Martijn van de Rijdt"
   ],
-  "scripts" : { "test" : "grunt test" },
+  "scripts": {
+    "test": "grunt test"
+  },
   "devDependencies": {
     "grunt-contrib-uglify": "~0.2.2",
     "grunt": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-sass": "~0.5.0"
   }
 }
