--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt": "~0.4.1",
     "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-contrib-sass": "~0.5.0"
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-jsbeautifier": "~0.2.3",
+    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
