--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "enketo-dristhi",
-  "description": "Customized enketo-core for hybrid Android app 'Dristhi'",
-  "homepage": "https://play.google.com/store/apps/details?id=org.ei.drishti",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/martijnr/enketo-dristhi"
-  },
-  "contributors": [
-    "Martijn van de Rijdt"
-  ],
-  "scripts": {
-    "test": "grunt test"
-  },
-  "devDependencies": {
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-jsbeautifier": "~0.2.3",
-    "grunt-contrib-jshint": "~0.7.1",
-    "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.3"
-  }
+    "name": "enketo-dristhi",
+    "description": "Customized enketo-core for hybrid Android app 'Dristhi'",
+    "homepage": "https://play.google.com/store/apps/details?id=org.ei.drishti",
+    "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MartijnR/enketo-dristhi"
+    },
+    "contributors": [
+        "Martijn van de Rijdt"
+    ],
+    "scripts": {
+        "test": "grunt test"
+    },
+    "devDependencies": {
+        "grunt-contrib-uglify": "~0.2.2",
+        "grunt": "~0.4.1",
+        "grunt-contrib-jasmine": "~0.5.2",
+        "grunt-template-jasmine-requirejs": "~0.1.7",
+        "grunt-contrib-sass": "~0.5.0",
+        "grunt-contrib-connect": "~0.5.0",
+        "grunt-jsbeautifier": "~0.2.3",
+        "grunt-contrib-jshint": "~0.7.1",
+        "grunt-contrib-requirejs": "~0.4.1",
+        "grunt-contrib-watch": "~0.5.3"
+    }
 }
