--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
         "Martijn van de Rijdt"
     ],
     "scripts": {
-        "test": "grunt test"
+        "test": "grunt"
     },
     "devDependencies": {
-        "grunt-contrib-uglify": "~0.2.2",
         "grunt": "~0.4.1",
-        "grunt-contrib-jasmine": "~0.5.2",
-        "grunt-template-jasmine-requirejs": "~0.1.7",
         "grunt-contrib-sass": "~0.5.0",
         "grunt-contrib-connect": "~0.5.0",
         "grunt-jsbeautifier": "~0.2.3",
