changed grunt test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "Martijn van de Rijdt"
     ],
     "scripts": {
-        "test": "grunt"
+        "test": "grunt test"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
