--- a/config.json
+++ b/config.json
@@ -10,5 +10,7 @@
         "enketo-widget/datetime/datetimepicker-extended",
         "enketo-widget/mediagrid/mediagridpicker",
         "enketo-widget/medialabel/medialabelwidget"
-    ]
+    ],
+    "gmapsStaticApiKey": "",
+    "gmapsDynamicApiKey": ""
 }
