Sowmya & Kiran | Added ziggy as a submodule. Changed some module definitions such that the same build of enketo-dristhi works on both browser and dristhi-app.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/enketo-json"]
 	path = lib/enketo-json
 	url = https://github.com/MartijnR/enketo-json.git
+[submodule "lib/ziggy"]
+	path = lib/ziggy
+	url = git@github.com:SEL-Columbia/ziggy.git
