--- a/config.json
+++ b/config.json
@@ -9,9 +9,9 @@
         "enketo-widget/date/datepicker-extended",
         "enketo-widget/datetime/datetimepicker-extended",
         "enketo-widget/mediagrid/mediagridpicker",
-        "enketo-widget/medialabel/medialabelwidget",
         "enketo-widget/select-likert/likertitem"
     ],
     "gmapsStaticApiKey": "",
-    "gmapsDynamicApiKey": ""
+    "gmapsDynamicApiKey": "",
+    "environment": "android"
 }
